--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "project",
   "version": "1.1.0",
   "description": "nodejs项目模板",
-  "main": "run.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "NODE_ENV=product node run.js",
     "dev": "gulp dev",
-    "test": "cross-env NODE_ENV=test node_modules/mocha/bin/mocha test/**/*.test.js",
-    "cov": "cross-env NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha test/**/*.test.js  -- -R spec"
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha test/**/*.test.js",
+    "cov": "NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha test/**/*.test.js  -- -R spec"
   },
   "author": "ruanjiayou",
   "license": "ISC",
